--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Second repo</title>
 </head>
 <body>
+    <h1>I can push cod to github.</h1>
+    <h1>I can code now</h1>
+    <h3>New code change</h3>
     
 </body>
 </html>
