--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push cod to github.</h1>
     <h1>I can code now</h1>
     <h3>New code change</h3>
+    <p>new paragraph added</p>
+    <p>Hi! I have listed some products on Amazon and I wish to optimize and advertise one of them - ASIN B09XFC9G5Z. As far as I know, optimizing a product means optimizing the text of the listing, adding adequate key words, improving bullet points and so on. If that is so, please let me know if you can help me with this task and let me know how much does </p>
     
 </body>
 </html>
